# market-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/market_mcp/: client.py  server.py
tests/: test_logic.py  test_server.py  test_yfinance.py
